# US-Company-Bankruptcy-Prediction

./: pyproject.toml  requirements.txt  setup.py
artifact/08_24_2025_02_26_40/data_ingestion/ingested/: test.csv
artifact/08_24_2025_02_30_05/data_ingestion/ingested/: test.csv
artifact/08_27_2025_00_36_00/data_ingestion/ingested/: test.csv
artifact/08_27_2025_00_36_47/data_ingestion/ingested/: test.csv
artifact/08_27_2025_00_41_31/data_ingestion/ingested/: test.csv
artifact/08_27_2025_00_44_04/data_ingestion/ingested/: test.csv
artifact/08_27_2025_00_48_41/data_ingestion/ingested/: test.csv
artifact/08_27_2025_00_49_34/data_ingestion/ingested/: test.csv
artifact/08_27_2025_00_53_47/data_ingestion/ingested/: test.csv
artifact/08_27_2025_01_01_18/data_ingestion/ingested/: test.csv
artifact/08_27_2025_01_02_51/data_ingestion/ingested/: test.csv
artifact/08_27_2025_01_05_21/data_ingestion/ingested/: test.csv
artifact/08_27_2025_01_05_21/data_transformation/transformed_object/: preprocessing.pkl
artifact/08_27_2025_01_24_13/data_ingestion/ingested/: test.csv
artifact/08_27_2025_01_24_13/data_transformation/transformed_object/: preprocessing.pkl
artifact/08_27_2025_11_47_19/data_ingestion/ingested/: test.csv
config/: schema.yaml
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat  get_gprof  get_objgraph  jp.py  jsonpointer  undill
notebook/: mongoDB_demo.ipynb
src/components/: data_ingestion.py  data_transformation.py
src/constants/: __init__.py
src/data_access/: US_Company_Bankruptcy_data.py
(+1 files in other folders)
